--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,10 +24,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v1
+      - uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v1
         with:
           go-version: 1.16
-      - uses: actions/checkout@v2
       - run: go test -v -coverprofile=profile.cov ./...
       - name: Send coverage
         uses: shogo82148/actions-goveralls@v1
