--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.16
-      - run: go test -v -coverprofile=profile.cov ./...
+      - run: go test -v -race -coverprofile=profile.cov ./...
       - name: Send coverage
         uses: shogo82148/actions-goveralls@v1
         with:
